@@ -5,16 +5,22 @@ Changes since 0.9.0
 
 device files:
  - based on MPLAB version 8.90
+ - Improved data memory specifications: shared is part of data.
+ - Shadow bytes are pre-allocated in shared memory where
+   possible: less bank switching, less code memory usage.
+ - Removed 'inline' from most pseudo variables: less code memory.
+ - Shadow bytes declared volatile to prevent pin glitches.
  - Fixed config bits of many baseline and midrange PICs.
    Unused bits read as '1' of most midrange PICs and as '0' for
    most baseline PICs (with many exceptions!).
+ - Fixed accidentally suppressed ADCON2_CHSNx bitfields (14H core).
  - Added constant ADC_MAX_RESOLUTION specifying the maximum ADC
    resolution (0,8,10,12).
  - Added aliases without '0' for ADRES0{H|L} registers.
- - Fixed accidentally suppressed ADCON2_CHSNx bitfields (14H core).
  - Un-enumerate ADCON2 fields TRIGSEL and CHSN (14H core).
  - Un-enumerate CMxCON1 fields CxPCH and CxNCH (14H core).
  - Un-enumerate CLKRCON fields CLKRDC and CLKRDIV (14H core).
+ - Un-enumerate CDAFVR and ADFVR bits of FVRCON (14 and 14H core).
  - Rename SLRCONx_SLRCONxy bits to SLRCONx_SLRxy (14H core).
  - Rename ODCONx_ODCONxy bits to ODCONx_ODxy (14H core).
 
